--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "ethers": "^6.11.1",
+    "joi": "^17.12.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-error-boundary": "^4.0.13",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4",
-    "web3": "^4.7.0"
+    "web3": "^4.7.0",
+    "web3-core-helpers": "^1.10.3"
   },
   "scripts": {
     "start": "react-scripts start",
