--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-PRIVATE_KEY=TuClavePrivada
-INFURA_API_KEY=TuClaveAPIdeInfura
+PRIVATE_KEY_METAMASK='vapor order lion moon leave voyage worry call luxury section loyal multiply'
+INFURA_API_KEY='TuClaveAPIdeInfura'
 ETHERSCAN_API_KEY='W3UVH9T3M5KRBKGKQTUMN6EDBBP298MQGY'
+NFT_STORAGE= '2d34e703.66ae8dfcfd9e40eeb7afe34be3c7c1d3'
